@@ -1,3 +1,5 @@
+* Fixed mapping description of GOME2 L1 product ingestion.
+
 1.1 2017-11-06
 ~~~~~~~~~~~~~~
 
